added radio button feature to student registration form

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=thymeleafdemo
 countries=Brazil,France,India,Mexico,Japan,Spain,United States
+languages=Java,Python,C++,Golang,C#
