added checkbox feature to student form

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=thymeleafdemo
 countries=Brazil,France,India,Mexico,Japan,Spain,United States
 languages=Java,Python,C++,Golang,C#
+operatingsystems=windows,MacOs,Linux
